--- a/style.css
+++ b/style.css
@@ -103,68 +103,74 @@ input {
 /* virus GIF's & images*/
 
 #img1 {
+  z-index: 1;
   position: absolute;
-  top: 700px;
-  left: 150px;
+  top: 60%;
+  left: 10%;
 }
 
 #img2 {
+  z-index: 1;
   position: absolute;
-  top: 330px;
-  left: 55px;
+  top: 42%;
+  left: 4%;
 
 }
 
 #img3 {
+  z-index: 1;
   position: absolute;
-  top: 560px;
-  left: 230px;
+  top: 70%;
+  left: 25%;
 }
 
 #img4 {
   z-index: 1;
   position: absolute;
-  top: 730px;
-  left: 1232px;
+  top: 70%;
+  left: 60%;
 }
 
 #img5 {
+  z-index: 1;
   position: absolute;
-  top: 400px;
-  left: 1400px;
+  top: 40%;
+  left: 72%;
 }
 
 #img6 {
+  z-index: 1;
   position: absolute;
-  top: 50px;
-  left: 1000px;
+  top: 5%;
+  left: 55%;
 }
 
 #img7 {
+  z-index: 1;
   position: absolute;
-  top: 130px;
-  left: 930px;
+  top: 13%;
+  left: 50%;
 }
 
 #img8 {
   z-index: 2;
   position: absolute;
-  top: 150px;
-  left: 1543px;
+  top: 15%;
+  left: 75%;
 }
 
 #img9 {
   z-index: 2;
   position: absolute;
-  top: 150px;
-  left: 333px;
+  top: 15%;
+  left: 20%;
 }
 
 #img10 {
   z-index: 2;
   position: absolute;
-  top: 430px;
-  left: 500px;
+  top: 43%;
+  left: 27%;
 }
 
 .main-image {
